<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yangjianlin.hkmonitor_3813.MainActivity">

    <EditText
        android:id="@+id/text_input_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_input_preview_host"
        android:inputType="textUri" />

    <EditText
        android:id="@+id/text_input_com"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_input_preview_com"
        android:layout_below="@id/text_input_host"
        android:inputType="textUri" />

    <EditText
        android:id="@+id/text_input_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_input_preview_key"
        android:layout_below="@id/text_input_com"
        android:inputType="textUri" />

    <EditText
        android:id="@+id/text_input_secret"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_input_preview_secret"
        android:layout_below="@id/text_input_key"
        android:inputType="textUri" />

    <Button
        android:id="@+id/find_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/text_input_secret"
        android:text="@string/title_activity_find" />


</RelativeLayout>
